--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,7 @@
-aniso8601==9.0.1
-cffi==1.15.0
-click==8.1.3
-colorama==0.4.4
 Flask==2.1.2
-Flask-Executor==0.10.0
-Flask-RESTful==0.3.9
-Flask-SQLAlchemy==2.5.1
+Flask_RESTful==0.3.9
+Flask_SQLAlchemy==2.5.1
 gevent==21.12.0
-greenlet==1.1.2
-importlib-metadata==4.11.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-marshmallow==3.15.0
-packaging==21.3
-psycopg2==2.9.3
-pycparser==2.21
-pyparsing==3.0.9
-pytz==2022.1
-six==1.16.0
+pytest==7.1.2
 SQLAlchemy==1.4.36
-typing==3.7.4.3
-webargs==8.1.0
 Werkzeug==2.1.2
-zipp==3.8.0
-zope.event==4.5.0
-zope.interface==5.4.0
