--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+black==22.3.0
+flake8==4.0.1
 Flask==2.1.2
-Flask_RESTful==0.3.9
-Flask_SQLAlchemy==2.5.1
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
 gevent==21.12.0
+isort==5.10.1
+mypy==0.961
+pipreqs==0.4.11
+psycopg2==2.9.3
 pytest==7.1.2
+pytest-mock==3.7.0
 SQLAlchemy==1.4.36
+sqlalchemy-stubs==0.4
+typing==3.7.4.3
+webargs==8.1.0
 Werkzeug==2.1.2
